<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>
    <string name="app_name">QLess</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="MenuBtn">Menu</string>
    <string name="BackBtn">Back</string>
    <string name="menu_settings">Settings</string>
    <string name="ranklabel">"Rank : "</string>
    <string name="countrylabel">"Country : "</string>
    <string name="populationlabel">"Population : "</string>
    <string name="txtmenu">Today\'s Specials</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="products">Products</string>
    <string name="proceed">Proceed</string>
    <string name="cart">My Cart</string>
    <string name="my_order">My Order</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="search_keyword">Search Keyword</string>
    <string name="no_offers_available">No Offers available with this search keyword!</string>
    <string name="google_maps_key">paste_your_key_here</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="location">Location</string>


    <string-array name="locations">

        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>

        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>

        <item>Idaho</item>
        <item>Illinois Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>


        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>

        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>

        <item>Missouri</item>
        <item>Montana Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>

        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>

    </string-array>
    <string name="title_activity_maps">Map</string>


    <!--North Dakota-->
    <!--Ohio-->
    <!--Oklahoma-->
    <!--Oregon-->
    <!--Pennsylvania Rhode Island-->
    <!--South Carolina-->
    <!--South Dakota-->
    <!--Tennessee-->
    <!--Texas-->
    <!--Utah-->
    <!--Vermont-->
    <!--Virginia-->
    <!--Washington-->
    <!--West Virginia-->
    <!--Wisconsin-->
    <!--Wyoming-->


</resources>