<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/inc_toolbar" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/linear"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:padding="10dip"

        android:textColor="@color/black_deep"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="6dip">

        <TextView
            android:id="@+id/txtwelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Welcome"
            android:textSize="22sp" />

        <Button
            android:id="@+id/myCart"
            style="@style/TextViewStyleMedium"
            android:layout_marginTop="10dip"
            android:background="@color/purple"
            android:text="@string/cart"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/myOrders"
            style="@style/TextViewStyleMedium"
            android:layout_marginTop="10dip"
            android:background="@color/purple"
            android:text="@string/my_order"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSearch"
            style="@style/TextViewStyleMedium"
            android:layout_marginTop="10dip"
            android:background="@color/purple"
            android:text="@string/search"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/btnLocation"
            style="@style/TextViewStyleMedium"
            android:layout_marginTop="10dip"
            android:background="@color/purple"
            android:text="@string/location"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/logout"
            style="@style/TextViewStyleMedium"
            android:layout_marginTop="8dip"
            android:background="@color/purple"
            android:text="@string/LogoutBtn"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>