<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/inc_toolbar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <Button
        android:id="@+id/btnSearch"
        style="@style/TextViewStyleMedium"
        android:layout_alignParentBottom="true"
        android:background="@color/purple"
        android:text="@string/search"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearTop"
        android:layout_above="@id/btnSearch"
        android:orientation="vertical"
        android:padding="6dip">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_keyword"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <ListView
            android:id="@+id/listProducts"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>

        <TextView
            android:id="@+id/txtNoOffers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dip"
            android:visibility="gone"
            android:textSize="21sp"
             android:gravity="center"
            android:text="@string/no_offers_available"
              />

    </LinearLayout>
</RelativeLayout>